syntax = "proto3";

option go_package = "urlshortener/pkg/proto/authpb";

package authpb;

service AuthService {
	rpc Login (LoginRequest) returns (LoginResponse);
	rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string token = 1;
}

message VerifyTokenRequest {
	string token = 1;
}

message VerifyTokenResponse {
	string userId = 1;
}